<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Settings">
        <EditTextPreference
            android:defaultValue="Wifi Search"
            android:inputType="text"
            android:key="wifi"
            android:summary="@string/wifi_description"
            android:title="@string/pref_wifi_name" />

        <EditTextPreference
            android:defaultValue="@string/gps_default_command"
            android:inputType="text"
            android:key="gps"
            android:summary="@string/gps_description"
            android:title="@string/pref_gps_name" />

        <EditTextPreference
            android:defaultValue="@string/ring_default_command"
            android:dependency="answer"
            android:inputType="text"
            android:key="ringing"
            android:summary="@string/ringing_description"
            android:title="@string/ringing_title" />

        <EditTextPreference
            android:defaultValue="60"
            android:dependency="answer"
            android:inputType="number"
            android:key="ringing_duration"
            android:summary="@string/ringing_duration_description"
            android:title="@string/ringing_duration_title" />

        <EditTextPreference
            android:defaultValue="20"
            android:dependency="answer"
            android:inputType="number"
            android:key="gps_time"
            android:summary="@string/gps_time_descr"
            android:title="@string/gps_work_time" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="answer"
            android:summary="@string/response_descr"
            android:title="@string/answer_to_requests" />
        <CheckBoxPreference
            android:title="@string/remote"
            android:summary="@string/remote_descr"
            android:defaultValue="false"
            android:key="remote_active" />
        <EditTextPreference
            android:title="@string/remote_command"
            android:inputType="text"
            android:key="remote"
            android:dependency="remote_active"/>
    </PreferenceCategory>
</PreferenceScreen>