<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewPhone"
        style="@android:style/TextAppearance.DeviceDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:labelFor="@id/editTextPhone"
        android:padding="5dp"
        android:text="@string/phone_number" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewPhone"
        android:inputType="text"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/copySmsTextView"
        style="@android:style/TextAppearance.DeviceDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPhone"
        android:labelFor="@id/textSms"
        android:padding="5dp"
        android:text="@string/insert_sms_text" />

    <EditText
        android:id="@+id/textSms"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_above="@+id/button_find"
        android:layout_below="@+id/copySmsTextView"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" />

    <Button
        android:id="@+id/button_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="sms_process"
        android:text="@string/parse_sms" />
</RelativeLayout>