<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:background="@drawable/custom_shape_orange"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/max_sms_number" />

    <EditText
        android:id="@+id/max_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />


    <TextView
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sms_delay" />

    <EditText
        android:id="@+id/delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="In seconds"
        android:inputType="number"
        android:minHeight="48dp" />


    <TextView
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tracking_accuracy" />

    <EditText
        android:id="@+id/accuracy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="15"
        android:inputType="number"
        android:minHeight="48dp" />


    <TextView
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/coord_in_sms" />

    <EditText
        android:id="@+id/number_of_coordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="4"
        android:inputType="number"
        android:minHeight="48dp" />

</LinearLayout>