<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="1000px"
    android:layout_height="1000px"
    android:background="@drawable/custom_shape"
    android:orientation="vertical"
    android:padding="10dp">

    <Button
        android:id="@+id/add_from_contact_button"
        android:layout_width="220dp"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="78dp"
        android:background="@drawable/custom_shape"
        android:backgroundTint="@color/orange_color"
        android:fontFamily="@font/gotham_bold"
        android:onClick="btn_get_contact"
        android:text="@string/add_from_contacts_button" />

    <TextView
        android:id="@+id/add_number_name"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_from_contact_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="228dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/gotham_bold"
        android:gravity="center_horizontal"
        android:text="Name"
        android:textColor="#03A9F4"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_number_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="4dp"
        android:fontFamily="@font/gotham_book"
        android:gravity="center"
        android:hint="@string/name_hint_text"
        android:minHeight="48dp"
        android:textColor="#FF9800"
        android:textColorHint="#055390"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/new_phone_title"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="89dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/gotham_bold"
        android:gravity="center_horizontal"
        android:text="New phone number"
        android:textColor="#03A9F4"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_phone_title"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/gotham_book"
        android:gravity="center"
        android:hint="@string/example_number"
        android:minHeight="48dp"
        android:textColor="#FF9800"
        android:textColorHint="#055390"
        android:textSize="18sp" />

</RelativeLayout>